ATLAS-2768: update attentionfield on stoppoint update